--- a/assets/css/Styles.css
+++ b/assets/css/Styles.css
@@ -11,3 +11,8 @@ footer a {
     color: white;
     text-decoration: none;
   }
+
+  .custom-tooltip {
+    --bs-tooltip-bg: var(--bd-violet-bg);
+    --bs-tooltip-color: var(--bs-white);
+  }
