--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11978,4 +11978,20 @@ html {
 body {
   background-color: black;
   color: white;
+}
+
+.testimonio__text {
+  text-align: center;
+}
+.testimonio__nombres {
+  text-align: center;
+}
+.testimonio__imagen img {
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid white;
+  width: 50px;
+  height: 50px;
 }/*# sourceMappingURL=main.css.map */
