--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet"');
 :root,
 [data-bs-theme=light] {
@@ -11976,7 +11977,7 @@ html {
 }
 
 body {
-  background-color: black;
+  background-color: rgb(41, 40, 40);
   color: white;
 }
 
@@ -11984,7 +11985,11 @@ body {
   text-align: center;
 }
 .testimonio__nombres {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+  padding-top: 10px;
 }
 .testimonio__imagen img {
   border-radius: 50%;
@@ -11994,4 +11999,11 @@ body {
   border: 1px solid white;
   width: 50px;
   height: 50px;
+}
+
+.contacto__info {
+  margin: auto;
+}
+.contacto__info--box {
+  padding: 7px;
 }/*# sourceMappingURL=main.css.map */
